--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -12,10 +12,10 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(${PROJECT_NAME} 
     PRIVATE glad glm glfw OpenGL::GL)
 
-add_custom_command(
-    TARGET ${PROJECT_NAME} 
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy
-        $<TARGET_FILE:${PROJECT_NAME}>
-        ${CMAKE_SOURCE_DIR}/boids
-)
+# add_custom_command(
+#     TARGET ${PROJECT_NAME} 
+#     POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy
+#         $<TARGET_FILE:${PROJECT_NAME}>
+#         ${CMAKE_SOURCE_DIR}/boids
+# )
