--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
+    - name:  Configure Linux
+        run:   |
+              if [ "$RUNNER_OS" == "Linux" ]; then
+                    sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
+              fi
+        shell: bash
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -30,8 +36,16 @@ jobs:
         --wheel
         --outdir dist/
         ./engine
+    - name: Install twine
+      run: >-
+        python -m 
+        pip install 
+        twine
+        --user
     - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
+      run: >-
+        python -m 
+        twine upload --repository testpypi
+        dist/* 
+        -u __token__
+        -p ${{ secrets.TEST_PYPI_API_TOKEN }}
