--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -10,7 +10,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(${PROJECT_NAME} 
-    PRIVATE glad glm glfw)
+    PRIVATE glad glm glfw OpenGL::GL)
 
 # add_custom_command(
 #     TARGET ${PROJECT_NAME} 
