--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,15 +7,14 @@ jobs:
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
     strategy:
       matrix:
-        # os: [macos-latest, ubuntu-latest, windows-latest]
-        os: [windows-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
     - name: Configure Linux
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
+              sudo apt-get install -y  libgl1-mesa-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
         fi
       shell: bash
     - name: Set up Python 3.10
@@ -28,11 +27,10 @@ jobs:
         pip install
         build
         --user
-    - name: Build a binary wheel and a source tarball
+    - name: Build a binary wheel
       run: >-
         python -m
         build
-        --sdist
         --wheel
         --outdir dist/
         ./engine
