Setup github actions

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -3,16 +3,11 @@ project(engine LANGUAGES CXX)
 
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cc)
 
-pybind11_add_module(${PROJECT_NAME} ${sources})
+pybind11_add_module(${PROJECT_NAME} SHARED ${sources})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-
-if(UNIX AND NOT APPLE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-endif()
 
 target_link_libraries(${PROJECT_NAME} 
     PRIVATE glad glm glfw OpenGL::GL)
