--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,16 +7,17 @@ jobs:
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        # os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
-    - name: Configure Linux
-      run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get install -y  libgl1-mesa-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
-        fi
-      shell: bash
+    # - name: Configure Linux
+    #   run: |
+    #     if [ "$RUNNER_OS" == "Linux" ]; then
+    #           sudo apt-get install -y  libgl1-mesa-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
+    #     fi
+    #   shell: bash
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
