Feature/ci cd (#1)
* Setup github actions

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -7,7 +7,8 @@ pybind11_add_module(${PROJECT_NAME} ${sources})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(${PROJECT_NAME} 
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(${PROJECT_NAME} 
     PRIVATE glad glm glfw OpenGL::GL)
