--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,10 @@
 name: Build and publish
 
-on:
-  push:
-    branches:
-      - 'releases/**'
+on: push
 
 jobs:
   build:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
+    name: Build and publish
     strategy:
       matrix:
         # os: [macos-latest, ubuntu-latest, windows-latest]
@@ -26,28 +23,14 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install pypa/build
-      run: >-
-        python -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel
-      run: >-
-        python -m
-        build
-        --wheel
-        --outdir dist/
-        ./engine
+      run: python -m pip install build
+    - name: Install cibuildwheel
+      run: python -m pip install cibuildwheel==2.10.2
+    - name: Build wheels
+      run: python -m cibuildwheel --output-dir wheelhouse
+      env:
+        CIBW_ARCHS_MACOS: x86_64 arm64
     - name: Install twine
-      run: >-
-        python -m 
-        pip install 
-        twine
-        --user
-    - name: Publish distribution 📦 to Test PyPI
-      run: >-
-        python -m 
-        twine upload --repository testpypi
-        dist/* 
-        -u __token__
-        -p ${{ secrets.TEST_PYPI_API_TOKEN }}
+      run: python -m pip install twine
+    - name: Publish distribution
+      run: python -m twine upload --repository testpypi wheelhouse/* -u __token__ -p ${{ secrets.TEST_PYPI_API_TOKEN }}
