--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install cibuildwheel
       run: python -m pip install cibuildwheel==2.10.2
     - name: Build wheels
-      run: python -m cibuildwheel --output-dir wheelhouse
+      run: python -m cibuildwheel --output-dir wheelhouse ./engine
       env:
         CIBW_ARCHS_MACOS: x86_64 arm64
     - name: Install twine
